--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.weight = weight\n",
+    "        self.size = None\n",
+    "        self.species = None\n",
+    "        self.food_type = None\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal:\n",
+    "            print(\"I sleep during the night.\")\n",
+    "        else:\n",
+    "            print(\"I sleep during the day.\")\n",
+    "            \n",
+    "    def eat(self, food):\n",
+    "        if self.food_type == 'omnivore':\n",
+    "            print(f\"{self.name} the {self.species} thinks {food} is yummy!\")\n",
+    "        elif (self.food_type == 'carnivore' and food == 'meat') or (self.food_type == 'herbivore' and food == 'plants'):\n",
+    "            print(f\"{self.name} the {self.species} thinks {food} is yummy!\")\n",
+    "        else:\n",
+    "            print(\"I don't eat this!\")\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -72,12 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight) \n",
+    "        self.species = 'elephant'\n",
+    "        self.size = 'enormous'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -95,12 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'tiger'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -118,12 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'raccoon'\n",
+    "        self.size = 'small'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True\n",
+    "        "
    ]
   },
   {
@@ -141,12 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "     def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'gorilla'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False\n",
+    "        "
    ]
   },
   {
@@ -176,12 +221,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    animal = None\n",
+    "    if animal_type == 'Gorilla':\n",
+    "        animal = Gorilla(name, weight)\n",
+    "    elif animal_type == 'Raccoon':\n",
+    "        animal = Raccoon(name, weight)\n",
+    "    elif animal_type == 'Tiger':\n",
+    "        animal = Tiger(name, weight)\n",
+    "    elif animal_type == 'Elephant':\n",
+    "        animal = Elephant(name, weight)\n",
+    "    zoo.append(animal)\n",
+    "   "
    ]
   },
   {
@@ -200,11 +257,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x2659aaf9d30>,\n",
+       " <__main__.Elephant at 0x2659aaf9d68>,\n",
+       " <__main__.Raccoon at 0x2659aaf9da0>,\n",
+       " <__main__.Raccoon at 0x2659aaf9dd8>,\n",
+       " <__main__.Gorilla at 0x2659aaf9e10>,\n",
+       " <__main__.Tiger at 0x2659aaf9e48>,\n",
+       " <__main__.Tiger at 0x2659aaf9e80>,\n",
+       " <__main__.Tiger at 0x2659aaf9eb8>]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "animals_to_add = [['Elephant','steve', 1000], ['Elephant','bill', 1200], ['Raccoon', 'rocket', 15], ['Raccoon','rocky', 12], \n",
+    "                  ['Gorilla','mary', 800], ['Tiger','tony', 250], ['Tiger','dana', 225], ['Tiger', 'violet', 275]]\n",
+    "zoo = []\n",
+    "\n",
+    "for i in animals_to_add:\n",
+    "    add_animal_to_zoo(zoo, i[0], i[1], i[2])\n",
+    "\n",
+    "zoo"
    ]
   },
   {
@@ -226,12 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    for animal in zoo:\n",
+    "        if time == 'Day':\n",
+    "            if animal.nocturnal == False:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')\n",
+    "        else:\n",
+    "            if animal.nocturnal:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')\n",
+    "                "
    ]
   },
   {
@@ -243,10 +339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "steve the elephant thinks plants is yummy!\n",
+      "bill the elephant thinks plants is yummy!\n",
+      "mary the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +367,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rocket the raccoon thinks plants is yummy!\n",
+      "rocky the raccoon thinks plants is yummy!\n",
+      "tony the tiger thinks meat is yummy!\n",
+      "dana the tiger thinks meat is yummy!\n",
+      "violet the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, time = 'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,9 +404,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -296,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
